tests/error/func_code_error.gw
// [contains] in function:
function void test() { <<<b>>>; }
